--- a/src/MainContent/OrderInfo/Chart/InfoChart.css
+++ b/src/MainContent/OrderInfo/Chart/InfoChart.css
@@ -1,8 +1,10 @@
 .bgColor{
     background-color:#3366FF;
     border-radius:15px;
-    padding-bottom:2.3rem;
+    
 }
-.bgColor span{
-    margin-top:2.7rem;
+.batteryInfo{
+    border-radius: 18px;
+    padding: 0.5rem;
 }
+
