--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 	
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -50,3 +51,10 @@ table {
 
 }
 
+a{
+	text-decoration:none !important;
+}
+
+body *{
+	transition:1000ms;
+}
