--- a/src/Components/Sidebar/SBMenu/SBMenu.css
+++ b/src/Components/Sidebar/SBMenu/SBMenu.css
@@ -16,5 +16,11 @@
 .collapsed .menu_collapse-icon{
     rotate:0deg;
     
+}
 
+
+@media only screen and (max-width: 716px) {
+    .menu_collapse-icon{
+        margin-left: 1.7rem;
+    }
 }
