Add Bootstrap-react and delete Bootstrap and respansive for navbar

--- a/src/Components/Sidebar/SBMenu/SBMenu.css
+++ b/src/Components/Sidebar/SBMenu/SBMenu.css
@@ -18,9 +18,14 @@
     
 }
 
+.mr-15{
+    margin-left:0.15rem;
+}
 
-@media only screen and (max-width: 716px) {
+
+
+/* @media only screen and (max-width: 716px) {
     .menu_collapse-icon{
         margin-left: 1.7rem;
     }
-}
+} */
