--- a/src/Components/Sidebar/SBMenu/SBMenu.css
+++ b/src/Components/Sidebar/SBMenu/SBMenu.css
@@ -1,6 +1,7 @@
 .menu_item_active{
     background: white;
     border-radius: 21px;
+    padding:1rem 1rem;
 }
 .menu_item_active a{
     color:#5459EA !important;
@@ -16,9 +17,5 @@
 .collapsed .menu_collapse-icon{
     rotate:0deg;
     
-}
-
-.mr-15{
-    margin-left:0.15rem;
 }
 
