Refactor routes and set UseRoutes

--- a/src/Components/Sidebar/SBMenu/SBMenu.css
+++ b/src/Components/Sidebar/SBMenu/SBMenu.css
@@ -27,8 +27,8 @@
     .menuItem{
         padding:0 1rem; 
     }
-    .menu_item_active {
+    /* .menu_item_active {
             padding: 1rem 1.5rem !important;
-    }
+    } */
 }
 
